fix(client): hide nav logo by default, and show on load since if logo visible before full render, "ghost" SVG shows briefly.

--- a/client/src/app/nav/nav.component.scss
+++ b/client/src/app/nav/nav.component.scss
@@ -85,6 +85,8 @@ nav {
 
 #home {
 
+  opacity: 0;
+
   // Hide when menu open on phones
   @include phones {
     @include transition(opacity, 0.3s, ease-in-out);
